# UnmanglerBackend

./: CMakeLists.txt  Dockerfile  README.md  dockerBuild.sh
.ngrest/: name
apache2/: unmangler.conf
unmangler/: CMakeLists.txt
unmangler/src/: unmangler.cpp  unmangler.h
