cmake_minimum_required(VERSION 2.6)

project (unmangler CXX)

set(UNMANGLER_HEADERS unmangler.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(UNMANGLER_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(UNMANGLER_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${UNMANGLER_HEADERS})

CODEGEN_FILES(UNMANGLER_CODEGEN_SOURCES ${UNMANGLER_CODEGEN_DIR} ${UNMANGLER_HEADERS})

add_custom_command(OUTPUT ${UNMANGLER_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${UNMANGLER_CODEGEN_DIR} -t service ${UNMANGLER_HEADERS}
    DEPENDS ${UNMANGLER_HEADERS_PATHS}
)

file(GLOB UNMANGLER_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND UNMANGLER_SOURCES ${UNMANGLER_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(unmangler MODULE ${UNMANGLER_SOURCES})

set_target_properties(unmangler PROPERTIES PREFIX "")
set_target_properties(unmangler PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(unmangler ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
